--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -3,14 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/black_back"
+    android:background="@color/izzi_background"
     tools:context="telecom.televisa.com.izzi.AddCardActivity">
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:background="@drawable/brounded_corners"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:clickable="true"
+        android:onClick="saveCard"
+        android:layout_height="45dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
+<ImageView
+    android:layout_width="15dp"
+    android:layout_height="fill_parent"
+    android:layout_centerVertical="true"
+
+    android:src="@drawable/check"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_marginLeft="5dp"
+            android:text="Listo"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="#ffffff"
+            />
+        </LinearLayout>
+
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/vista"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        >
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true">
         <include layout="@layout/headerextra" />
 
         <LinearLayout
@@ -68,7 +108,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textSize="16sp"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -100,30 +140,30 @@
             android:layout_height="wrap_content"
             android:text="Ingresa el número de tu tarjeta"
 
-            android:textColor="#fff"
+            android:textColor="#000"
             android:textSize="15sp"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="1dp"
             />
 
-                <com.devmarvel.creditcardentry.library.CreditCardForm
-                    android:layout_width="fill_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="5dp"
-                    app:include_exp="false"
-                    android:ems="6"
-                    android:textSize="15sp"
-                    app:include_zip="false"
-                    app:include_security="false"
-                    android:background="#FFFFFF"
-                    android:id="@+id/cardNumber"
-                    app:input_background="@drawable/trjetacuadro"
-                    />
+            <com.devmarvel.creditcardentry.library.CreditCardForm
+                android:layout_width="fill_parent"
+                android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="5dp"
+                app:include_exp="false"
+                android:ems="6"
+                android:textSize="15sp"
+                app:include_zip="false"
+                app:include_security="false"
+                android:background="#FFFFFF"
+                android:id="@+id/cardNumber"
+                app:input_background="@drawable/trjetacuadro"
+                />
 
 
-        <LinearLayout
+            <LinearLayout
             android:layout_width="fill_parent"
             android:id="@+id/restOfFields"
             android:layout_height="wrap_content"
@@ -154,7 +194,7 @@
                 android:text="Fecha de expiración"
 
                 android:layout_marginTop="5dp"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textSize="15sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="1dp"
@@ -169,7 +209,7 @@
                     android:layout_width="fill_parent"
                     android:layout_margin="1dp"
                     android:orientation="horizontal"
-                    android:background="#FFFFFF"
+                    android:background="#b3b3b3"
                     android:layout_height="fill_parent">
 
                     <ImageView
@@ -281,41 +321,4 @@
         </ScrollView>
 
     </LinearLayout>
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:background="@drawable/brounded_corners"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:clickable="true"
-        android:onClick="saveCard"
-        android:layout_height="45dp">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal">
-<ImageView
-    android:layout_width="15dp"
-    android:layout_height="fill_parent"
-    android:layout_centerVertical="true"
-
-    android:src="@drawable/check"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:layout_marginLeft="5dp"
-            android:text="Listo"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="#ffffff"
-            />
-        </LinearLayout>
-
-    </RelativeLayout>
 </RelativeLayout>
